# fuel-canary-watchtower

./: .env.example  .gitignore  Cargo.toml  IMPROVEMENTS.md  README.md  watchtower_config.json.example  watchtower_config_bridge.json  watchtower_config_local.json  watchtower_config_mainnet.json
abi/: BridgeFungibleTokenContract.json
src/: alerter.rs  alerts.rs  config.rs  ethereum_actions.rs  ethereum_utils.rs  ethereum_watcher.rs  ethereum_watcher_old.rs  fuel_watcher.rs  lib.rs  main.rs  pagerduty.rs  test_utils.rs
src/ethereum_watcher/: ethereum_chain.rs  ethereum_utils.rs  gateway_contract.rs  portal_contract.rs  state_contract.rs
src/fuel_watcher/: extended_provider.rs  fuel_chain.rs  fuel_utils.rs  fungible_token_contract.rs
tests/: state_contract_test.rs
