[package]
name = "fuel-canary-watchtower"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.68"
ethers = "2.0.10"
eyre = "0.3.7"
fuels = { version = "0.49.0", features = ["fuel-core-lib"] }
log = "0.4.17"
log4rs = "1.2.0"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.25", features = ["macros"] }